--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
+  
+  <head>
+    <link rel = "stylesheet" href = "styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  
+  <body>
 
-<h1>Website bla</h1>
-<p>My first paragraph.</p>
 
-</body>
+  <h1>Website bla</h1>
+  <p>My first paragraph.</p>
+
+  </body>
 </html>
