--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="topnav">
      <a class="active" href="index.html">Home</a>
-     <a href="#pop">Browse Pop</a>
+     <a href="pop.html">Browse Pop</a>
      <a href="#rnb">Browse R&B</a>
      <a href="#rock">Browse Rock</a>
      <a href="about.html">About</a>
