--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   
   <body>
     
-    <h1>Website bla</h1>
+    <h1>About Us</h1>
     
     <div class="topnav">
      <a href="index.html">Home</a>
