--- a/pop.html
+++ b/pop.html
@@ -10,7 +10,7 @@
     
     <h1>POP</h1>
     
-    <div class="topnav">
+    <div class="header">
      <a href="index.html">Home</a>
      <a class="active" href="pop.html">Browse Pop</a>
      <a href="#rnb">Browse R&B</a>
