--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h1>Website bla</h1>
     
-    <div class="topnav">
+    <div class="head">
      <a class="active" href="index.html">Home</a>
      <a href="pop.html">Browse Pop</a>
      <a href="#rnb">Browse R&B</a>
