--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     
-    <h1>Website bla</h1>
+    <a href="index.html"><h1>Website bla</h1><a>
     
     <div class="header">
      <a class="active" href="index.html">Home</a>
