--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title> Change11 </title>
+    <title> Change12 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -24,6 +24,13 @@
     <p>My first paragraph.</p>
       
     <div class="reviews">
+      <p>blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
+      blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
+      blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
+      blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
+      blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br></p>
+    </div>
+    <div class="reccomendations">
       <p>blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
       blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
       blabablablablaablablablablabalablabalabalabalbalabalabalabalblablabalbla<br>
