--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title> Change12 </title>
+    <title> EDITED </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
