--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="header">
      <a class="active" href="index.html">Home</a>
      <a href="pop.html">Browse Pop</a>
-     <a href="#rnb">Browse R&B</a>
-     <a href="#rock">Browse Rock</a>
+     <a href="rnb.html">Browse R&B</a>
+     <a href="rock.html">Browse Rock</a>
      <a href="about.html">About</a>
     </div>
     
