--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <div class="header">
      <a href="index.html">Home</a>
      <a href="pop.html">Browse Pop</a>
-     <a href="#rnb">Browse R&B</a>
-     <a href="#rock">Browse Rock</a>
+     <a href="rnb.html">Browse R&B</a>
+     <a href="rock.html">Browse Rock</a>
      <a class="active" href="about.html">About</a>
     </div>
       
