--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     
     <div class="header">
-      <a href="index.html"><h1>Website bla</h1><a>
+      <a href="index.html" class="logo"><h1>Website bla</h1><a>
       <div class="header-right">
        <a class="active" href="index.html">Home</a>
        <a href="pop.html">Browse Pop</a>
