--- a/pop.html
+++ b/pop.html
@@ -9,7 +9,7 @@
   <body>
     
     <div class="header">
-      <a href="index.html" class="logo"><h1>Website bla</h1><a>
+      <a href="index.html" class="logo">Website bla<a>
       <div class="header-right">
        <a href="index.html">Home</a>
        <a class="active" href="pop.html">Browse Pop</a>
