--- a/pop.html
+++ b/pop.html
@@ -22,7 +22,8 @@
      <h4>Pop Artists</h4>
         
      <div class="popImage"></div>
-     <div class="clear"></div>
+     <img src="https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg"
+          class="popImage">
     
     <br>
     <br>
