--- a/pop.html
+++ b/pop.html
@@ -23,7 +23,7 @@
         
      <div class="popImage">
        <img src="https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg" alt="Image of" 
-            style="width=100%;">
+            style="width=100%">
      </div>
     
     <div class="popArtist">
