--- a/pop.html
+++ b/pop.html
@@ -22,7 +22,7 @@
      <h4>Pop Artists</h4>
      <div class="clear">   
       <div class="popImage">
-         <img src="https://m.media-amazon.com/images/M/MV5BYTYxODRmNzItMGFkNS00Mzk4LTk0NTMtYjdiYjgwYWNhODQ2XkEyXkFqcGdeQXVyNTg1MDY4NjQ@._V1_.jpg" alt="Image of" 
+         <img src="https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg" alt="Image of" 
              style="width=24%">
        </div>
     
