--- a/pop.html
+++ b/pop.html
@@ -22,7 +22,7 @@
      <h4>Pop Artists</h4>
       
        <img src="https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg" alt="Image of" 
-             style="width=100%", class = "popImage">
+             class = "popImage">
    
     
     <div class="popArtist">
