--- a/pop.html
+++ b/pop.html
@@ -26,7 +26,7 @@
     
     <a href="artist.html"><div class="popArtist">
       <div class="text">
-        <p>About the Artist</p>
+        <h3>About the Artist</h3>
      </div>
     </div></a>
     
