--- a/artist2.html
+++ b/artist2.html
@@ -22,7 +22,7 @@
     <h4>Artist2 Name</h4>
     
     <div class="popImage">
-       <img src="https://static01.nyt.com/images/2021/01/31/arts/31popcast/31popcast-mediumSquareAt3X.jpg" alt="Image of Olivia Rodrigo">
+       <img src="https://image.flaticon.com/icons/png/512/168/168726.png" alt="Image of">
     </div>
     
     <div class="popReview">
