--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> EDITED </title>
+    <title> Home | Music </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
