--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> TITLE </title>
+    <title> About Us </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
