--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> TITLE </title>
+    <title> Artist 1 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
