--- a/pop.html
+++ b/pop.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> TITLE3 </title>
+    <title> Browse Pop </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
