--- a/rnb.html
+++ b/rnb.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> TITLE </title>
+    <title> Browse R&B </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
