--- a/rock.html
+++ b/rock.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> TITLE </title>
+    <title> Browse Rock </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
