--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <br>
     
     <div class="footer">
-      <h5>Contact Information</h5>
+      <p>Contact Information</p> <br>
+      <p>email:</p>
     </div>
     
   </body>
