--- a/rock.html
+++ b/rock.html
@@ -9,7 +9,7 @@
   <body>
     
      <div class="header">
-      <a href="index.html" class="logo">Website bla</a>
+      <a href="index.html" class="logo">Now Playing</a>
       <div class="header-right">
        <a href="index.html">Home</a>
        <a href="pop.html">Browse Pop</a>
