--- a/artist1.html
+++ b/artist1.html
@@ -35,16 +35,16 @@
       <div class="text">
         <h3>Review</h3>
      </div>
-      <h6>testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
-        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest<br>
+      <h6>testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
+        testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
         testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
       </h6>
     </div>
