--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     
     <div class="footer">
       <p>Contact Information</p> <br>
-      <p>email:</p>
+      <p>email: nowplaying@gmail.com</p>
+      <p>phone: (123)456-7890</p>
     </div>
     
   </body>
