--- a/pop.html
+++ b/pop.html
@@ -63,7 +63,9 @@
     <br>
     
     <div class="footer">
-      <h2>Footer</h2>
+      <p>Contact Information</p> <br>
+      <p>email: nowplaying@gmail.com</p>
+      <p>phone: (123)456-7890</p>
     </div>
     
   </body>
