--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <p>Contact Information</p> <br>
       <p>email: nowplaying@gmail.com</p>
       <p>phone: (123)456-7890</p>
+      <div class="footer-right">
+        <a href="about.html"><p>About and Policies</p></a>
+      </div>
     </div>
     
   </body>
