--- a/pop.html
+++ b/pop.html
@@ -22,7 +22,7 @@
     <h4>Pop Artists</h4>
     
     <div class="artist">
-      <a href="artist1.html"><h5>Olivia Rodrigo</h5></a>
+      <a href="artist1.html">Olivia Rodrigo</a>
     </div>
     
     <a href="artist1.html"><div class="popImage">
