--- a/pop.html
+++ b/pop.html
@@ -37,8 +37,10 @@
          <h3>About the Artist</h3>
          <p>Age: 18</p>
        
-         <p>Olivia Rodrigo is an actress, singer, and songwriter who has been featured in Disney shows where she has become popular through her recent 
-          singles and albums that she has put out. Her debut album release, Sour, has already reached the top charts.</p>
+         <p>Olivia Rodrigo is an actress, singer, and songwriter who has been featured in multiple Disney shows including her recent Disney+ show, 
+           <em>High School Musical: The Musical: The Series</em>. She rose to fame through her recent singles that she has put out through her show and at 
+           the beginning of 2021. Her debut album release, <em>Sour</em>, has already reached the top charts that includes her debut single 
+           <em>drivers liscense</em>. Olivia has already performed on live on a big stage at the Brit awards and on SNL before her album was even released.</p>
      </div>
     </div></a>
     
