--- a/pop.html
+++ b/pop.html
@@ -34,7 +34,7 @@
     
      <a href="artist1.html"><div class="popArtist">
       <div class="text">
-        <h3>About the Artist</h3>
+        <h3>All About Olivia</h3>
          <p>Born: February 20, 2003, age 18</p>
          <p>Genre(s): Pop</p>
          <p>Labels: Interscope and Geffen Records</p>
