--- a/pop.html
+++ b/pop.html
@@ -42,7 +42,7 @@
          <p>Olivia Rodrigo is an actress, singer, and songwriter who has been featured in multiple Disney shows including her recent Disney+ show, 
            <em>High School Musical: The Musical: The Series</em>. She rose to fame through her recent singles that she has put out through her show and at 
            the beginning of 2021. Her three debut singles broke multiple streaming and Billboard records soon after their release. In addition, her debut album 
-           release, <em>Sour</em>, has already reached the top charts that includes her debut single <em>drivers liscense</em>. Olivia has already performed on 
+           release, <em>SOUR</em>, has already reached the top charts that includes her debut single <em>drivers liscense</em>. Olivia has already performed on 
            live on a big stage at the Brit awards and on SNL before her album was even released. Currently, her album is rising in the charts and the second
            season of her hit show, <em>High School Musical: The Musical: The Series</em>, is streaming.
         </p>
