--- a/artist1.html
+++ b/artist1.html
@@ -46,6 +46,7 @@
         testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
         testtesttesttesttesttesttesttesttesttesttesttesttesttesttest
       </p>
+     </div>
     </div>
       
      <div class="popArtist">
