--- a/artist1.html
+++ b/artist1.html
@@ -49,7 +49,7 @@
      </div>
     </div>
       
-     <div class="popArtist">
+     <div class="songs">
       <div class="text">
         <h3>Albums and Songs</h3>
          <p>Album: SOUR (2021)</p>
