--- a/artist1.html
+++ b/artist1.html
@@ -19,7 +19,7 @@
       </div>
     </div>
       
-    <h4>Artist1 Name</h4>
+    <h4>Olivia Rodrigo</h4>
         
     <div class="popImage">
        <img src="https://static01.nyt.com/images/2021/01/31/arts/31popcast/31popcast-mediumSquareAt3X.jpg" alt="Image of Olivia Rodrigo">
