--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       <p>phone: (123)456-7890</p>
       <a href="about.html"><p>Contact Form</p></a>
       <div class="footer-right">
+        <p>Now Playing</p>
+        <p>Seattle, WA</p>
         <a href="about.html"><p>About and Policies</p></a>
       </div>
     </div>
