--- a/artist2.html
+++ b/artist2.html
@@ -44,10 +44,12 @@
     
     
     <div class="footer">
-      <p>Contact Information</p> <br>
-      <p>email: nowplaying@gmail.com</p>
-      <p>phone: (123)456-7890</p>
-      <a href="about.html"><p>Contact Form</p></a>
+      <div class="footer-left">
+       <p>Contact Information</p> <br>
+       <p>email: nowplaying@gmail.com</p>
+        <p>phone: (123)456-7890</p>
+       <a href="about.html"><p>Contact Form</p></a>
+      </div>
       <div class="footer-right">
         <p>Now Playing</p>
         <p>Seattle, WA</p>
