--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="recommendations">
       <div class="text">
         <h3>RECOMMENDATIONS</h3>
-        
+        <a href="artist1.html"><p>SOUR by Olivia Rodrigo</p></a>
       </div>
     </div>
     
