--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a href="about.html"><p>About and Policies</p></a>
       </div>
     </div>
+    <div class="clear"></div>
     
   </body>
 </html>
