--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     
     <script>
-      document.getElementById("1").innerHTML = getElementById("oliviaReview");
+      document.getElementById("1").innerHTML = getElementById("oReview");
     </script>
   </body>
 </html>
