--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change1 </title>
+    <title> Artist 1 change2 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -92,6 +92,8 @@
         <a href="about.html"><p>About and Policies</p></a>
       </div>
     </div>
-    
+    <script>
+      localStorage.setItem('oReview', x);
+    </script>
   </body>
 </html>
