--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     
     <script>
-      document.getElementById("1").innerHTML = getElementById("oReview");
+      document.getElementById("1").innerHTML = localStorage.getItem('oReview', x);;
     </script>
   </body>
 </html>
