--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change4 </title>
+    <title> Artist 1 change5 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -88,7 +88,7 @@
    
     </div>
     <script>
-      localStorage.setItem('oReview', getElementById("oliviaReview"));
+      localStorage.setItem('oReview', getElementById("oliviaReview").innerHTML);
     </script>
   </body>
 </html>
