--- a/artist1.html
+++ b/artist1.html
@@ -88,7 +88,7 @@
    
     </div>
     <script>
-      localStorage.setItem('oReview', getElementById("oliviaReview"));
+      localStorage.setItem('oReview', getElementById("oliviaReview").innerHTML);
     </script>
   </body>
 </html>
