--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div class="reviews">
       <div class="text">
         <h3>REVIEWS</h3>
-        <p id="1"></p>
+        <a href="artist1.html">
+          <p id="1"></p>
+        </a>
         <p id="2"></p>
       </div>
     </div>  
