--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     
     <script>
-      document.getElementById("1").innerHTML = localStorage.getItem('oReview').substring(0,541);
+      document.getElementById("1").innerHTML = localStorage.getItem('oReview').substring(0,536).concat("...");
     </script>
   </body>
 </html>
