--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <div class="recommendations">
       <div class="text">
-        <h3>User Posts</h3>
+        <h3>YOUR POSTS</h3>
         
       </div>
     </div>
