--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     <div class="recommendations">
       <div class="text">
         <h3>RECOMMENDATIONS</h3>
-        <a href="artist1.html"><p>SOUR by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><p><em>traitor</em> by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><p><em>happier</em> by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><p><em>All I Want</em> by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><p><em>deja vu</em> by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><p><em>hope ur ok</em> by Olivia Rodrigo</p></a>
       </div>
     </div>
     
