--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="recommendations">
       <div class="text">
         <h3>YOUR POSTS</h3>
-        
+        You have not posted any reviews yet...
       </div>
     </div>
 
