--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
       <div class="text">
         <h3>REVIEWS</h3>
         <a href="artist1.html">
-          <p id="1"></p>
+          id="1"
         </a>
-        <p id="2"></p>
+        id="2"
       </div>
     </div>  
     
     <div class="recommendations">
       <div class="text">
         <h3>RECOMMENDATIONS</h3>
-        <a href="artist1.html"><p><em>traitor</em> by Olivia Rodrigo</p></a>
-        <a href="artist1.html"><p><em>happier</em> by Olivia Rodrigo</p></a>
-        <a href="artist1.html"><p><em>All I Want</em> by Olivia Rodrigo</p></a>
-        <a href="artist1.html"><p><em>deja vu</em> by Olivia Rodrigo</p></a>
-        <a href="artist1.html"><p><em>hope ur ok</em> by Olivia Rodrigo</p></a>
+        <a href="artist1.html"><em>traitor</em> by Olivia Rodrigo</a>
+        <a href="artist1.html"><em>happier</em> by Olivia Rodrigo</a>
+        <a href="artist1.html"><em>All I Want</em> by Olivia Rodrigo</a>
+        <a href="artist1.html"><em>deja vu</em> by Olivia Rodrigo</a>
+        <a href="artist1.html"><em>hope ur ok</em> by Olivia Rodrigo</a>
       </div>
     </div>
     
