--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
       <div class="text">
         <h3>REVIEWS</h3>
         <a href="artist1.html">
-          id="1"
+          <p id="1"></p>
         </a>
-        id="2"
+        <p id="2"></p>
       </div>
     </div>  
     
     <div class="recommendations">
       <div class="text">
         <h3>RECOMMENDATIONS</h3>
-        <a href="artist1.html"><em>traitor</em> by Olivia Rodrigo</a>
-        <a href="artist1.html"><em>happier</em> by Olivia Rodrigo</a>
-        <a href="artist1.html"><em>All I Want</em> by Olivia Rodrigo</a>
-        <a href="artist1.html"><em>deja vu</em> by Olivia Rodrigo</a>
-        <a href="artist1.html"><em>hope ur ok</em> by Olivia Rodrigo</a>
-      </div>
+        <a href="artist1.html"><em>traitor</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>happier</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>All I Want</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>deja vu</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>hope ur ok</em> by Olivia Rodrigo</a> <br>
+      </div> 
     </div>
     
     <div class="recommendations">
