--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <a href="artist1.html"><em>All I Want</em> by Olivia Rodrigo</a> <br>
         <a href="artist1.html"><em>deja vu</em> by Olivia Rodrigo</a> <br>
         <a href="artist1.html"><em>hope ur ok</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>jealousy, jealousy</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>drivers liscense</em> by Olivia Rodrigo</a> <br>
+        <a href="artist1.html"><em>good 4 u</em> by Olivia Rodrigo</a> <br>
       </div> 
     </div>
     
