--- a/artist1.html
+++ b/artist1.html
@@ -75,7 +75,7 @@
     
     <div class="clear"></div>
     
-    <form onsubmit = "confirmInput()" action="about.html">
+    <form onsubmit = "confirmInput()" action="artist1.html">
       Review subject: <input id = "subj" type="text">
       <span> Write your review! </span>
       <br>
