--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
       
     <div class="reviews">
-      <div class="text">
+      <div class="text2">
         <h3>REVIEWS</h3>
         <a href="artist1.html">
           <p id="1"></p>
