--- a/artist1.html
+++ b/artist1.html
@@ -99,8 +99,8 @@
     <script>
       localStorage.setItem('oReview', document.getElementById("oliviaReview").innerHTML);
       function confirmInput() {
-        fname = document.forms[0].fname.value;
-        alert("Hello " + fname + "! Your form was successfully submitted!" + document.getElementById("review").value);
+        subj = document.forms[0].subj.value;
+        alert("Hello " + subj + "! Your form was successfully submitted!" + document.getElementById("review").value);
       }
     </script>
   </body>
