--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change11 </title>
+    <title> Artist 1 change12 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -104,7 +104,7 @@
       }
       function newReview() {
         subj = document.forms[0].subj.value;
-        review = document.getElementById("review").value
+        review = document.getElementById("review").value;
         var h = document.createElement("div");
         h.className = "popReview";
         document.body.appendChild(h);
