--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change13 </title>
+    <title> Artist 1 change14 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -75,7 +75,7 @@
     
     <div class="clear"></div>
     
-    <form onsubmit = "newReview()">
+    <form onsubmit = "newReview()" action = "#">
       Review subject: <input id = "subj" type="text">
       <span> Write your review! </span>
       <br>
