--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change15 </title>
+    <title> Artist 1 change16 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -109,6 +109,8 @@
         review = document.getElementById("review").value;
         var h = document.createElement("div");
         h.className = "popReview";
+        var reviews = document.getElementById("reviews");
+        reviews.insertBefore(h, reviews.childNodes[0]);
         document.body.appendChild(h);
       }
     </script>
