--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change17 </title>
+    <title> Artist 1 change18 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -111,7 +111,7 @@
         h.className = "popReview";
         var reviews = document.getElementById("reviews");
         reviews.insertBefore(h, reviews.childNodes[0]);
-        reviews.appendChild(h);
+        document.reviews.appendChild(h);
       }
     </script>
   </body>
