--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <p id="1"></p>
         </a>
       </div>
+      <p>More reviews coming soon!</p>
     </div>  
     
     <div class="recommendations">
